added ruby core lessons

--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -10,6 +10,8 @@
 	<%= render partial: 'course', locals: {course: 'Ideator - An idea sharing app', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: true, course_link: ideator_path, course_access: 'ideator'} %>
 	<!-- , lessons: RubyOnRails::LESSONS -->
 
+	<%= render partial: 'course', locals: {course: 'Ruby Core Training', course_name: 'Strengthen your Ruby skills by going through various coding challenges. Sharpening your thinking skills is crucial in becoming a developer.', available: true, course_link: ruby_core_path, course_access: 'ruby_core'} %>
+
 	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'With JavaScript, you can manipulate the web page in super fun ways.', available: false} %>
 
 	<%= render partial: 'course', locals: {course: 'Git/GitHub', course_name: 'Git and GitHub is used by the majority of web developers. Learn what it is and how you can utilize it to collaborate and implement version control.', available: false} %>
