--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <!-- Footer -->
 <footer>
+    <!--
     <div class="footer-above">
         <div class="container">
             <div class="row">
@@ -7,7 +8,7 @@
                     <h3>Have any Questions?</h3>
                     <p>Feel free to contact us at techrisecoding@gmail.com!</p>
                 </div>
-                <!-- <div class="footer-col col-md-4">
+                <div class="footer-col col-md-4">
                     <h3>Around the Web</h3>
                     <p>
                         Coming Soon!
@@ -29,14 +30,14 @@
                             <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
                         </li>
                     </ul>
-                </div> -->
+                </div>
                 <!-- <div class="footer-col col-md-4">
                     <h3>About Techrise</h3>
                     <p>Techrise teaches awesome people how to build awesome ideas</p>
-                </div> -->
+                </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="footer-below">
         <div class="container">
             <div class="row">
