--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,6 +32,10 @@
                     </li>
 
                     <li class="page-scroll">
+                      <%= link_to 'ALL COURSES', courses_path %>
+                    </li>
+
+                    <li class="page-scroll">
                       <%= link_to 'SETTINGS', edit_user_registration_path %>
                     </li>
 
