--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 
   <%= render '/layouts/nav' %>
 
-  <div class="container">
+  <div class="container-fluid">
     <div class = "content">
 
       <% if notice.present? %>
