--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -22,13 +22,12 @@
 
 <script type="text/javascript">
 var url = window.location;
-var sidebar_url = "<%= session[:back_to_lesson] %>"
 // Will only work if string in href matches with location
 $('ul.nav a[href="'+ url +'"]').parent().addClass('active');
 
 // Will also work for relative and absolute hrefs
 $('ul.nav a').filter(function() {
-    return this.href == url || this.href == sidebar_url;
+    return this.href == url
 }).parent().addClass('active');
 
 var ready;
