--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -40,18 +40,27 @@
                     </li>
 
                 <% else %>
+
                     <li class="page-scroll">
                       <a href="/#skills_you_will_learn">Skills</a>
                     </li>
+
                     <li class="page-scroll">
                       <a href="/#is_techrise_for_me">Goals</a>
                     </li>
+
                     <li class="page-scroll">
                       <a href="/#why_us">Why Techrise</a>
                     </li>
+
                     <li class="page-scroll">
                       <a href="/#about_us">About</a>
                     </li>
+
+                    <li class="page-scroll">
+                      <a href="/#team">Team</a>
+                    </li>
+
                     <li class="page-scroll">
                       <a href="/#contact_us">Contact Us</a>
                     </li>
