--- a/app/views/layouts/landing_page.html.erb
+++ b/app/views/layouts/landing_page.html.erb
@@ -34,13 +34,11 @@
 
 <script>
 window.sr = ScrollReveal({ reset: true, duration: 1000 });
-sr.reveal('.name');
-sr.reveal('.skills');
 sr.reveal('.join-buttons');
 sr.reveal('.skills_header');
 sr.reveal('.portfolio_items');
 sr.reveal('.text-center');
-sr.reveal('.about_text');
+sr.reveal('.scroll');
 </script>
 
 </body>
