--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
 
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 scroll">
             <h1 style="color:yellow;font-weight:600;">Have no prior coding experience?</h1>
             <h4 style="letter-spacing:3px;">
                With a personal mentor, you can still learn how to build web applications in just 3 months.
@@ -17,7 +17,7 @@
             <h4 style="letter-spacing:3px;">So...if you're ready to start coding, then join Techrise now by filling out the form on the right.</h4>
           </div>
 
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 scroll">
             <h3 style="letter-spacing:3px;">Join now to get instant access to our course materials</h3>
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -202,7 +202,7 @@
                 <hr class="star-light">
             </div>
         </div>
-        <div class="row about_text">
+        <div class="row about_text scroll">
             <div class="col-lg-4 col-lg-offset-2">
               <h3 style = "color:yellow;">Have no prior coding experience? You can still learn how to build web applications with Ruby on Rails in just 3 months</h3>
               <p>
