--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,7 +9,7 @@
                With a personal mentor, you can still learn how to build web applications in just 3 months.
             </h4>
             <p>
-              The demand for web developers is increasing <strong>everywhere around the world</strong> and is predicted to keep on growing. In today's world, if you can code, you're considered a pretty awesome person.
+              The demand for web developers is increasing <strong>everywhere around the world</strong> and is predicted to keep on growing. In todays world, if you can code, there are unlimited opportunities out there for you.
             </p>
             <p>
               Imagine what you could do if you could build web applications. You could <strong>start a new career</strong>. You could <strong>help out your company</strong>. You could help <strong>build your friend's dream product</strong>. You could <strong>build your <i>own</i> dream product</strong>. You could <strong>help out the community</strong>. <strong><i>The potential is endless</i></strong>.
