landing page revise

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,7 +14,7 @@
             <p>
               Imagine what you could do if you could build web applications. You could <strong>start a new career</strong>. You could <strong>help out your company</strong>. You could help <strong>build your friend's dream product</strong>. You could <strong>build your <i>own</i> dream product</strong>. You could <strong>help out the community</strong>. <strong><i>The potential is endless</i></strong>.
             </p>
-            <h4 style="letter-spacing:3px;">So...if you're ready to start coding, then join Techrise now by filling out the form on the right.</h4>
+            <h4 style="letter-spacing:3px;">So...if you're ready to start coding, then join Techrise now by filling out the form.</h4>
           </div>
 
           <div class="col-xs-12 col-md-6 scroll">
@@ -252,27 +252,27 @@
 
         <div class="row">
 
-          <div class="col-xs-12 col-md-6 scroll">
+          <div class="col-xs-12 col-md-7 scroll">
 
             <%= image_tag 'natsuko.jpg', class: 'prof_pic', alt: 'Techrise Nepal Natsuko Robyn Shinozaki' %>
             <br>
             <h5 style="color:yellow;">Natsuko Robyn Shinozaki | Co-founder</h5>
 
-            <p style="font-size:16px;">
+            <p style="font-size:16px;text-align:justify;">
               I'm passionate about serving the community and turning creative ideas into reality. I've worked with various non-profits in operations and communication. I want to help create environments where people can reach their full potential. Ice-cream and momo enthusiast :)
             </p>
 
             <a href="https://www.linkedin.com/in/robyn-natsuko-shinozaki-12883487" target="_blank" class="pull-right"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
           </div>
 
-          <div class="col-xs-12 col-md-6 scroll">
+          <div class="col-xs-12 col-md-5 scroll">
 
             <%= image_tag 'take.jpg', class: 'prof_pic', alt: 'Techrise Nepal Takehiro Mouri' %>
             <br>
             <h5 style="color:yellow;">Takehiro Mouri | Co-founder / Mentor</h5>
 
-            <p style="font-size:16px;">
-              Coding is awesome and my mission is to teach people how awesome it is. I work with a couple of start ups and help develop ideas into reality through web applications. I also won a few awards at a hackathon which was pretty fun. Other than coding, in my free time, I enjoy coding. :) I love momo.
+            <p style="font-size:16px;text-align:justify;">
+              Coding is awesome and my mission is to teach people how awesome it is. I work with a couple of start ups and help develop ideas into reality through web applications. I also won a few awards at a hackathon which was pretty fun. Other than coding, in my free time, I enjoy coding :) Lastly, I love momo.
             </p>
 
             <a href="https://www.linkedin.com/in/takehiro-mouri-a3083487" target="_blank" class="pull-right"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
