--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,11 +14,11 @@
             <p>
               Imagine what you could do if you could build web applications. You could <strong>start a new career</strong>. You could <strong>help out your company</strong>. You could help <strong>build your friend's dream product</strong>. You could <strong>build your <i>own</i> dream product</strong>. You could <strong>help out the community</strong>. <strong><i>The potential is endless</i></strong>.
             </p>
-            <h4 style="letter-spacing:3px;">So...if you're ready to start coding, then join Techrise now by filling out the form.</h4>
+            <h4 style="letter-spacing:3px;">So...if you're ready to start coding, join Techrise now by filling out the form.</h4>
           </div>
 
           <div class="col-xs-12 col-md-5 scroll">
-            <h3 style="letter-spacing:3px;">Join now to get instant access to our course materials</h3>
+            <h3 style="letter-spacing:3px;">Sign up now to get instant access to our course materials</h3>
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                   <%= devise_error_messages! %>
@@ -48,7 +48,7 @@
                   
                   <br>
                   <div class="actions">
-                    <%= f.submit "Sign up", class: 'btn btn-danger btn-lg btn-block' %>
+                    <%= f.submit "SIGN UP", class: 'btn btn-danger btn-lg btn-block' %>
                   </div>
             <% end %>
 
