--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -200,7 +200,7 @@
 <!--                   <div class = "why_techrise_icons"><i class="fa fa-graduation-cap"></i></div>
  -->              
                   <h1>1-on-1 Mentor Sessions</h1>
-                  <p style="text-align:justify font-size:20px; !important">
+                  <p style="text-align:justify; font-size:20px; !important">
                     Ask questions individually to your mentor and get the support you need. By having a mentor, you can learn quicker and more effectively.
                   </p>
                 </div>
@@ -210,7 +210,7 @@
                 <div class = "col-sm-12 col-md-4 text-center">
                   <!-- <div class = "why_techrise_icons"><i class="fa fa-globe"></i></div> -->
                   <h1>Build Real World Applications</h1>
-                  <p style="text-align:justify font-size:20px; !important">
+                  <p style="text-align:justify; font-size:20px; !important">
                     Instead of going just learning syntax and theory, we believe you can learn faster by actually building websites and web applications from day 1.
                   </p>
                 </div>
