add open graph data

--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -26,3 +26,9 @@
 <link id="theme-style" rel="stylesheet" href="assets/styles.css">
 
 <meta name="google-site-verification" content="R3LOLk39gjNUL80jKUvXPImniRdCdohSRRHTG80B6gg" />
+
+<!-- facebook Open Graph -->
+<meta property="og:type" content="website"/>
+<meta property="og:url" content = "http://www.techrise.me/">
+<meta property="og:image" content="http://i.imgur.com/rUHTdG7.png"/>
+<meta property="og:description" content="Learn how to code with interactive lessons and personal mentors at TECHRISE. Learn how to create web applications with HTML/CSS, Ruby on Rails, JavaScript, and other essential skills for all aspiring web developers and entrepreneurs."/>
