--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -26,7 +26,7 @@
           <h3 style="font-weight: 300;letter-spacing: 2px;">If you're ready to start unleashing your inner potential, join Techrise now by signing up.</h3>
         </div>
 
-        <div class="hidden-md col-md-5 scroll">
+        <div class="col-md-5 scroll">
           <h3 style="letter-spacing:3px;font-weight: 600;">Sign up now to get instant access to our course materials</h3>
 
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
